# service-object-detect-rbnx

./: .gitignore  README.md  package_manifest.yaml
capabilities/lib/perception/srv/: DetectObject.srv
capabilities/service/perception/object_detect/: detect_object.v1.toml  driver.v1.toml
config/: prompts.toml
llm_detect/: __init__.py  main.py
scripts/: build.sh  setup_repo.sh  start.sh  test_local.py
src/graspnet_msgs/: CMakeLists.txt  package.xml
src/graspnet_msgs/msg/: DetectedObject.msg  DetectedObjects.msg  GraspPose.msg  PiperStatusMsg.msg
src/graspnet_msgs/srv/: GraspRequest.srv
