cmake_minimum_required(VERSION 3.8)
project(graspnet_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# Generate messages and services
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/GraspPose.msg"
  "msg/PiperStatusMsg.msg"
  "msg/DetectedObject.msg"
  "msg/DetectedObjects.msg"
  "srv/ObjectDetectionRequest.srv"
  "srv/GraspRequest.srv"
  DEPENDENCIES geometry_msgs std_msgs
)

# Install message and service files
install(DIRECTORY msg srv
  DESTINATION share/${PROJECT_NAME}/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
